welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:5: error: not found: value lireMessage
		lireMessage() match{
                ^